added styling for header elements

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+/* styles the header elements */
+#content_header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
