--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,14 +14,13 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+  position: absolute;
+  height: 10%;
+  width: 100%;
 }
 
 .App-link {
