--- a/client/src/App.css
+++ b/client/src/App.css
@@ -65,9 +65,19 @@
 
 #header_nav_buttons {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
 }
 
-.header_nav_button{
-  margin: 5px;
+#header_nav_buttons a {
+  text-decoration: none;
+}
+
+.header_nav_button {
+  margin: 10px;
+  background-color: orange;
+  padding: 10px;
+
+  border-radius: 5px;
+  box-shadow: 5px 5px 10px;
+  text-decoration: none;
 }
