--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,6 +82,14 @@
   text-decoration: none;
 }
 
+#content_home_page {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+
+  height: 700px;
+}
+
 #home_page_buttons {
   display: flex;
   justify-content: center;
