edited dashboard styling

--- a/client/src/assets/dashboard.css
+++ b/client/src/assets/dashboard.css
@@ -10,7 +10,7 @@
     justify-content: center
 }
 
-.style_link .dashboard_button {
+.dashboard_button {
     margin: 10px;
     background-color: orange;
     padding: 10px;
