added styles to closer reflect wireframe

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,13 +5,23 @@
   src: url(./assets/DoppioOne.ttf);
 }
 
+:root {
+  --primary: #87ceeb;
+  --accent: #f1c233;
+  --light-gray: #eeeeee;
+  --dark: #000000;
+
+  --common-border-radius: 5px;
+  --large-border-radius: 10px;
+  --common-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.302);
+}
+
 * {
   font-family: 'Doppio One', sans-serif;
 }
 
-.App {
-  text-align: center;
 
+.App {
   /* display is set to show elements as a column*/
   display: flex;
   flex-direction: column;
@@ -50,6 +60,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 /* styles the header elements */
@@ -123,6 +137,19 @@
   text-decoration: none;
 }
 
-.hidden {
-  display: none;
+.btn-large {
+  /* min-width: 150px; */
+  padding: 20px 30px;
+
+  font-size: 1.0rem;
+  font-weight: bold;
+
+  border: none;
+  border-radius: var(--large-border-radius);
+
+  box-shadow: var(--common-box-shadow);
+}
+
+.btn-accent {
+  background-color: var(--accent);
 }
