--- a/client/src/App.css
+++ b/client/src/App.css
@@ -137,6 +137,19 @@ button:hover {
   text-decoration: none;
 }
 
+.btn {
+  /* min-width: 150px; */
+  padding: 10px 15px;
+
+  /* font-size: 1.0rem; */
+  /* font-weight: bold; */
+
+  border: none;
+  border-radius: var(--common-border-radius);
+
+  box-shadow: var(--common-box-shadow);
+}
+
 .btn-large {
   /* min-width: 150px; */
   padding: 20px 30px;
