event day selector styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,7 @@
   --primary: #87ceeb;
   --accent: #f1c233;
   --light-gray: #eeeeee;
+  --light: #ffffff;
   --dark: #000000;
 
   --common-border-radius: 5px;
