--- a/client/src/components/EventDaySelector/EventDaySelector.css
+++ b/client/src/components/EventDaySelector/EventDaySelector.css
@@ -3,3 +3,7 @@
     /* height: 10px; */
     border-bottom: 1px solid var(--dark);
 }
+
+.sweet_spot_time_span {
+    border-bottom: 3px solid var(--accent);
+}
