--- a/client/src/components/EventHeader/EventHeader.css
+++ b/client/src/components/EventHeader/EventHeader.css
@@ -1,9 +1,31 @@
 .event_header_container {
     width: 100%;
     height: 400px;
+    
+    position: relative;
+    isolation: isolate;
 
     background-size: cover;
     background-position: 50% 50%;
+
+    color: var(--light);
+}
+
+.event_header_container::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    background: linear-gradient(var(--dark), transparent);
+}
+
+.event_header_container > h1 {
+    margin-top: 0;
 }
 
 .event_read_more {
