--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,9 +12,14 @@
   --light: #ffffff;
   --dark: #000000;
 
+  --page-padding: 10%;
   --common-border-radius: 5px;
   --large-border-radius: 10px;
   --common-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.302);
+
+  --padding-sm: 10px;
+  --padding-md: 20px;
+  --padding-lg: 40px;
 }
 
 * {
@@ -80,18 +85,23 @@ button:hover {
 
 /* styles background for the page container */
 #page_container {
-  border-radius: 10px;
+  padding: 0 var(--page-padding);
+  padding-bottom: var(--page-padding);
+
+  position: relative;
+  /* border-radius: 10px;
   border-style: groove;
   box-shadow: 5px 5px 10px rgb(179, 153, 69), -5px 5px 10px rgb(179, 153, 69);
 
   margin: 10px;
 
-  height: 900px;
+  height: 900px; */
 }
 
 #header_nav_buttons {
   display: flex;
   justify-content: flex-end;
+  flex-wrap: wrap;
 }
 
 #header_nav_buttons a {
@@ -151,7 +161,7 @@ button:hover {
   box-shadow: var(--common-box-shadow);
 }
 
-.btn-large {
+.btn_large {
   /* min-width: 150px; */
   padding: 20px 30px;
 
@@ -164,6 +174,6 @@ button:hover {
   box-shadow: var(--common-box-shadow);
 }
 
-.btn-accent {
+.btn_accent {
   background-color: var(--accent);
 }
