--- a/client/src/components/DayOfWeekSelector/DayWidget/DayWidget.css
+++ b/client/src/components/DayOfWeekSelector/DayWidget/DayWidget.css
@@ -8,7 +8,7 @@
     width: 50px;
     height: 65px;
     
-    margin: 0 10px;
+    margin: 0 min(2%, 10px);
     padding: 0;
     
     display: flex;
