--- a/client/src/components/EventDaySelector/EventDaySelector.css
+++ b/client/src/components/EventDaySelector/EventDaySelector.css
@@ -1,3 +1,8 @@
+#content_event_page .day_selector {
+    margin-top: calc(400px + min(var(--page-padding), 40px));
+    padding-top: min(var(--page-padding), 40px);
+}
+
 .horizontal_line {
     /* width: 100%; */
     /* height: 10px; */
