--- a/client/src/assets/login.css
+++ b/client/src/assets/login.css
@@ -1,3 +1,8 @@
+:root{
+    --font: 'Doppio';
+   
+   }
+
 .login_container {
     display: flex;
     align-items: center;
@@ -36,4 +41,63 @@
 	border: none;
 	width: 370px;
 	padding: 15px;
+}
+
+.login_btn {
+	border: none;
+	outline: none;
+	padding: 12px 0;
+	background-color: #f1c233;
+	border-radius: 20px;
+	width: 180px;
+	font-weight: bold;
+	font-size: 14px;
+	cursor: pointer;
+}
+.signup-btn {
+	background-color:#f1c233;
+	color: white;
+    font-family: var(--font);
+    margin: 10px;
+}
+
+.error_msg {
+	font-size: 14px;
+    text-align: center;
+	background-color: #f34646;
+	color: white;
+	border-radius: 5px;
+    width: 370px;
+	padding: 15px;
+	margin: 5px 0;
+
+}
+
+.right {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: #87ceeb;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+}
+
+.right h1 {
+    align-self: center;
+	margin-top: 0;
+	color: white;
+	font-size: 40px;
+}
+
+.left {
+	flex: 2;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background-color: white;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
