--- a/client/src/App.css
+++ b/client/src/App.css
@@ -133,6 +133,7 @@ button:hover {
 #home_page_buttons div {
   display: flex;
   flex-direction: column;
+align-content: center;
 }
 
 .homepage_button {
@@ -175,4 +176,25 @@ button:hover {
 
 .btn_accent {
   background-color: var(--accent);
+}
+
+/* Mobile-first design */
+.image-container {
+  display: -ms-flexbox;
+  justify-content: center;
+  background-image: url('../src/images/page-images/home-page.png');
+height: 100vh;
+background-repeat: no-repeat;
+background-blend-mode:inherit;
+  background-size: contain;
+  max-width: 100%;
+  height: 100vh;
+
+  /* Ensure the container takes the full viewport height */
+}
+
+.homepage-image {
+
+  background-image: url('../src/images/page-images/home-page.png');
+
 }
