--- a/client/src/assets/login.css
+++ b/client/src/assets/login.css
@@ -1,103 +1,138 @@
-:root{
-    --font: 'Doppio';
-   
-   }
-
-.login_container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    min-height: 100vh;
-    background-color: #f5f5f5;
-
-}
-
-.login_form_container {
-    display: flex;
-    border-radius: 10px;
-    box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 20%),
-        0px 3px 4px 0px rgb(0 0 0 / 14%), 0px 1px 8px 0px rgb(0 0 0 / 12%);
-    width: 900px;
-    height: 500px;
-
-}
-.form_container {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-}
-.form_container h1 {
+:root {
+	--primary: #87ceeb;
+	--accent: #f1c233;
+	--light-gray: #eeeeee;
+	--light: #ffffff;
+	--dark: #000000;
+  
+	--page-padding: 10%;
+	--common-border-radius: 5px;
+	--large-border-radius: 10px;
+	--common-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.302);
+  
+	--padding-sm: 10px;
+	--padding-md: 20px;
+	--padding-lg: 40px;
+  }
+  
+  * {
+	font-family: 'Doppio One', sans-serif;
+  }
+  
+  .credentials_container {
+	display: flex;
+	flex-direction: column;
+	margin: 0 auto;
+	justify-content: center; /* Center vertically in the viewport */
+	align-items: center;
+	border-radius: 10px;
+	background-color: var(--primary);
+	width: 550px;
+  }
+  
+  .credentials_form_container {
+	display: flex;
+	border-radius: 10px;
+	background-color: var(--primary);
+	align-items: center;
+	flex-direction: column;
+	margin: 0 auto;
+	max-width: 550px; /* Adjust as needed */
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+  }
+  
+  .form_container {
+	align-items: center;
+	align-self: center;
+	flex-direction: column;
+	background-color: var(--primary);
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-color: #000000;
+	border-width: 5px;
+	width: 550px;
+	height: 355px;
+	text-align: center;
+  }
+  
+  .form_container h1 {
 	margin-top: 0;
-    font-size: 40px;
-}
-
-.input {
-    border-radius: 10px;
+	font-size: 40px;
+  }
+  
+  .input {
+	border-radius: 10px;
 	background-color: #edf5f3;
-	margin: 5px 0;
+	margin: 0.4rem 0;
 	font-size: 14px;
 	outline: none;
 	border: none;
 	width: 370px;
-	padding: 15px;
-}
-
-.login_btn {
+	padding: 10px;
+  }
+  
+  .nav_btn {
 	border: none;
 	outline: none;
 	padding: 12px 0;
 	background-color: #f1c233;
-	border-radius: 20px;
+	border-radius: var(--common-border-radius);
+	box-shadow: var(--common-box-shadow);
 	width: 180px;
 	font-weight: bold;
 	font-size: 14px;
 	cursor: pointer;
-}
-.signup-btn {
-	background-color:#f1c233;
-	color: white;
-    font-family: var(--font);
-    margin: 10px;
-}
-
-.error_msg {
+  }
+  
+  .error_msg {
 	font-size: 14px;
-    text-align: center;
+	text-align: center;
 	background-color: #f34646;
 	color: white;
 	border-radius: 5px;
-    width: 370px;
-	padding: 15px;
-	margin: 5px 0;
-
-}
-
-.right {
-	flex: 1;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background-color: #87ceeb;
-	border-top-right-radius: 10px;
-	border-bottom-right-radius: 10px;
-}
-
-.right h1 {
-    align-self: center;
-	margin-top: 0;
+	width: 220px;
+  }
+ .success_msg{
+	font-size: 14px;
+	text-align: center;
+	background-color: #2652e1;
 	color: white;
-	font-size: 40px;
-}
+	border-radius: 5px;
+	width: 220px;
+  }
 
-.left {
-	flex: 2;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	background-color: white;
-	border-top-left-radius: 10px;
-	border-bottom-left-radius: 10px;
-}
+  
+  .invisible {
+	visibility: hidden;
+  }
+  
+  #page_container {
+	padding-top: 100px;
+  }
+  
+  /* Media Query for Tablets */
+  @media (max-width: 768px) {
+	.credentials_container {
+	  padding: 0 10px;
+	}
+  
+	.credentials_form_container {
+	  max-width: 100%;
+	}
+  }
+  
+  /* Media Query for Mobile Devices */
+  @media (max-width: 480px) {
+	.nav_btn {
+	  font-size: 16px;
+	}
+  
+	.error_msg {
+	  font-size: 16px;
+	}
+  }
+  
