--- a/client/src/assets/login.css
+++ b/client/src/assets/login.css
@@ -1,24 +1,3 @@
-:root {
-	--primary: #87ceeb;
-	--accent: #f1c233;
-	--light-gray: #eeeeee;
-	--light: #ffffff;
-	--dark: #000000;
-  
-	--page-padding: 10%;
-	--common-border-radius: 5px;
-	--large-border-radius: 10px;
-	--common-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.302);
-  
-	--padding-sm: 10px;
-	--padding-md: 20px;
-	--padding-lg: 40px;
-  }
-  
-  * {
-	font-family: 'Doppio One', sans-serif;
-  }
-  
   .credentials_container {
 	display: flex;
 	flex-direction: column;
@@ -106,13 +85,11 @@
   }
 
   
-  .invisible {
-	visibility: hidden;
-  }
+
   
-  #page_container {
+  /* #page_container {
 	padding-top: 100px;
-  }
+  } */
   
   /* Media Query for Tablets */
   @media (max-width: 768px) {
