--- a/client/src/assets/homepage.css
+++ b/client/src/assets/homepage.css
@@ -32,21 +32,8 @@
   box-shadow: var(--common-box-shadow);
 
   color: var(--dark);
-  font-size: 1rem;
+  font-size: 20px;
 }
-
-/* .homepage_button {
-  width: 100%;
-
-  padding: 10px;
-  margin-bottom: 20px 0;
-
-  
-  border-radius: var(--common-border-radius);
-  
-  color: var(--dark);
-  text-align: center;
-} */
 
 .content_home_page {
   text-align: center;
