--- a/client/src/assets/login.css
+++ b/client/src/assets/login.css
@@ -7,6 +7,7 @@
 	border-radius: 10px;
 	background-color: var(--primary);
 	width: 550px;
+	justify-content: space-evenly;
   }
   
   .credentials_form_container {
@@ -16,7 +17,8 @@
 	align-items: center;
 	flex-direction: column;
 	margin: 0 auto;
-	max-width: 550px; /* Adjust as needed */
+	max-width: 600px; /* Adjust as needed */
+	min-height: 60px;
 	justify-content: center;
 	align-items: center;
 	align-content: center;
@@ -34,15 +36,10 @@
 	border-color: #000000;
 	border-width: 5px;
 	width: 550px;
-	height: 355px;
+	height: 400px;
 	text-align: center;
+	color:var(	--light);
   }
-  
-  .form_container h1 {
-	margin-top: 0;
-	font-size: 40px;
-  }
-  
   .input {
 	border-radius: 10px;
 	background-color: #edf5f3;
@@ -83,6 +80,14 @@
 	border-radius: 5px;
 	width: 220px;
   }
+  .image-container{
+	background-image: url("../images/page-images/create-event.jpg");
+	background-size:contain;
+	position: relative;
+	/* background-blend-mode:overlay; */
+  }
+  
+
 
   
 
