--- a/client/src/assets/dashboard.css
+++ b/client/src/assets/dashboard.css
@@ -4,13 +4,13 @@
     flex-direction: column;
 }
 
-#header_buttons {
+/* #header_buttons {
     display: flex;
     flex-direction: row;
     justify-content: center
-}
+} */
 
-.dashboard_button {
+/* .dashboard_button {
     margin: 10px;
     background-color: orange;
     padding: 10px;
@@ -18,26 +18,40 @@
     border-radius: 5px;
     box-shadow: 5px 5px 10px;
     text-decoration: none;
+} */
+
+.dashboard_btn {
+    margin-right: var(--padding-lg);
+    margin-bottom: var(--padding-lg);
+}
+
+#board_title {
+    margin-top: 0;
 }
 
 #board_elements {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    display: grid;
+    --dash-event-columns: 1;
+    grid-template-columns: repeat(var(--dash-event-columns), 1fr);
+    gap: 20px;
 }
 
 .event_box {
-    box-sizing: border-box;
-    --event-box-width: min(200px, 80vw);
+    --event-box-width: 100%;
     height: 200px;
     width: var(--event-box-width);
-
-    margin: 20px;
 
     background-color: var(--primary);
     box-shadow: var(--common-box-shadow);
     border-radius: var(--large-border-radius);
+    
+    transition: 0.15s;
+}
+
+.event_box:hover {
+    transform: scale(1.05);
+    box-shadow: var(--strong-box-shadow);
+    transition: 0.15s;
 }
 
 .event_box * {
@@ -68,8 +82,14 @@
     font-weight: bold;
 }
 
-@media screen and (min-width: 768px) {
-    .event_box {
-        --event-box-width: 300px;
+@media screen and (min-width: 500px) {
+    #board_elements {
+        --dash-event-columns: 2;
+    }
+}
+
+@media screen and (min-width: 950px) {
+    #board_elements {
+        --dash-event-columns: 3;
     }
 }
