--- a/client/src/assets/createEvent.css
+++ b/client/src/assets/createEvent.css
@@ -7,9 +7,17 @@
 #createEvent_form form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 }
 
-#createEvent_form form input, #createEvent_form form select {
-    margin: 10px;
+#event_name {
+    font-size: 1.2rem;
+}
+
+.event_thumbnail_preview {
+    width: 250px;
+    height: 200px;
+
+    background-size: cover;
+    background-position: 50%;
 }
