--- a/client/src/App.css
+++ b/client/src/App.css
@@ -192,3 +192,27 @@ button:hover {
 .btn_light:hover {
   background-color: var(--light-gray);
 }
+.joinT{
+  font-size: 50px;
+ margin-left: 350px;
+}
+.joinTT{
+  font-size: 20px;
+  margin-left: 370px;
+}
+.inputp {
+ margin-left: 420px;
+}
+.buttonJE{
+   margin-left: 470px;
+   margin-top: 20px;
+}
+.forme{
+  background-color: transparent;
+ transform-origin: top;
+ /* add depth with shadows*/
+ box-shadow: 0px 0px 145px rgba(230, 225, 225, 0.3);
+ padding: 15px;
+ transform: perspective(1000px); 
+ height: 50px;
+}
