--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,6 +7,7 @@
 
 :root {
   --primary: #87ceeb;
+  /* --primary: #7be485; */
   --accent: #f1c233;
   --accent-light: #ffd451;
   --light-gray: #eeeeee;
@@ -179,7 +180,7 @@ button:hover {
   border-radius: var(--large-border-radius);
 
   box-shadow: var(--common-box-shadow);
-  
+
   transition: 0.1s;
 }
 
@@ -207,11 +208,11 @@ button:hover {
 }
 .joinT{
   font-size: 50px;
- margin-left: 350px;
+ /* margin-left: 350px; */
 }
 .joinTT{
   font-size: 20px;
-  margin-left: 370px;
+  /* margin-left: 370px; */
 }
 .inputp {
  margin-left: 420px;
@@ -221,11 +222,13 @@ button:hover {
    margin-top: 20px;
 }
 .forme{
-  background-color: transparent;
- transform-origin: top;
+  /* background-color: blue; */
+ /* transform-origin: top; */
  /* add depth with shadows*/
- box-shadow: 0px 0px 145px rgba(230, 225, 225, 0.3);
+ /* box-shadow: 0px 0px 145px rgba(230, 225, 225, 0.3); */
  padding: 15px;
- transform: perspective(1000px); 
- height: 50px;
+ /* margin: 10px; */
+ /* transform: perspective(1000px); */
+ /* height: 50px; */
+
 }
