added username to navbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,20 @@ button:hover {
   color: var(--light);
 }
 
+.account_button {
+  display: flex;
+  align-items: center;
+
+  margin-right: var(--padding-md);
+
+  background-color: transparent;
+  border: none;
+
+  color: var(--light);
+  /* font-weight: bold; */
+  font-size: 1.2rem;
+}
+
 /* styles background for the page container */
 #page_container {
   padding: 0 var(--page-padding);
@@ -231,4 +245,11 @@ button:hover {
  /* transform: perspective(1000px); */
  /* height: 50px; */
 
+}
+
+@media screen and (max-width: 330px) {
+  .account_button {
+    display: none;
+  }
+  
 }
