styled error pages, proper redirect to 404 page on unfound event

--- a/client/src/components/GlobalLoader/GlobalLoader.css
+++ b/client/src/components/GlobalLoader/GlobalLoader.css
@@ -1,4 +1,4 @@
-.loading-container {
+.message-container {
     height: calc(100vh - var(--header-height) - (2 * var(--page-padding)));
     padding-top: 2rem;
     position: relative;
