--- a/client/src/helpers.css
+++ b/client/src/helpers.css
@@ -25,6 +25,24 @@
     justify-content: flex-start;
 }
 
+.justify-content-end {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.flex-wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.gap-sm {
+    gap: var(--padding-sm);
+}
+
+.gap-md {
+    gap: var(--padding-md);
+}
+
 .align-items-center {
     display: flex;
     align-items: center;
